# example_package_wakskevin

./: .gitignore  LICENSE  README.md  generaterc.py  package-lock.json  package.json  pyproject.toml  requirements.txt
scripts/: generate_pypirc.py
